Add a setting to force the app in english

--- a/platform/iphone/Settings.bundle/en.lproj/Root.strings
+++ b/platform/iphone/Settings.bundle/en.lproj/Root.strings
@@ -10,5 +10,7 @@
 	<string>Date of Creation</string>
 	<key>icloud</key>
 	<string>Sync to iCloud</string>
+	<key>forceEn</key>
+    <string>Force English</string>
 </dict>
 </plist>
