Display tap-and-hold tip once after adding a skin

--- a/Resources/i18n/default.json
+++ b/Resources/i18n/default.json
@@ -11,6 +11,9 @@
 			"close":"Close"
 		},
 		"noSelectedSkin":"No skin selected.",
+		"tips": {
+			"wear": "Protip: To wear a skin, tap and hold its icon!"
+		},
 		"skinDelete":{
 			"title":"Confirm Deletion",
 			"message":"Do you really want to delete \"%s\"?",
