Mention memory leaks fixing

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,7 +12,7 @@ Bug fixes and minor improvements:
 * Fix when editing a skin's info
 * Fix adding certain skins from an URL
 * Improve iAd behavior, should be less intrusive
-* Lots and lots of other improvements and bug fixes!
+* Lots and lots of memory improvements, bug fixes and other small stuff!
 
 The search function is provided by skinmanager.fr.nf: if you want to make a skin available to all the other users of SkinSwitch, check them out!
 The translations were updated as well as we could, but still not perfect: you can still freely contribute on sswitch.tr.outadoc.fr.
