Update translations + credits

--- a/Resources/i18n/ca.json
+++ b/Resources/i18n/ca.json
@@ -11,6 +11,9 @@
 			"close":"Tanca"
 		},
 		"noSelectedSkin":"Cap skin seleccionada.",
+		"tips":{
+			"wear":"Protip: To wear a skin, tap and hold its icon!"
+		},
 		"skinDelete":{
 			"title":"Confirma l'eliminació",
 			"message":"Realment vols eliminar \"%s\"?",
