--- a/Resources/i18n/fr.json
+++ b/Resources/i18n/fr.json
@@ -11,6 +11,9 @@
 			"close":"Fermer"
 		},
 		"noSelectedSkin":"Aucun skin sélectionné.",
+		"tips":{
+			"wear":"Protip : Pour porter un skin, touchez et maintenez son icône !"
+		},
 		"skinDelete":{
 			"title":"Confirmer la suppression",
 			"message":"Voulez-vous vraiment supprimer \"%s\" ?",
