--- a/Resources/i18n/nl.json
+++ b/Resources/i18n/nl.json
@@ -11,6 +11,9 @@
 			"close":"Sluiten"
 		},
 		"noSelectedSkin":"Geen skin geselecteerd.",
+		"tips":{
+			"wear":"Protip: To wear a skin, tap and hold its icon!"
+		},
 		"skinDelete":{
 			"title":"Confirm Deletion",
 			"message":"Do you really want to delete \"%s\"?",
