--- a/Resources/i18n/pl.json
+++ b/Resources/i18n/pl.json
@@ -11,6 +11,9 @@
 			"close":"Zamknij"
 		},
 		"noSelectedSkin":"Nie wybrano skórki",
+		"tips":{
+			"wear":"Protip: To wear a skin, tap and hold its icon!"
+		},
 		"skinDelete":{
 			"title":"Confirm Deletion",
 			"message":"Do you really want to delete \"%s\"?",
