--- a/Resources/i18n/zh.json
+++ b/Resources/i18n/zh.json
@@ -11,6 +11,9 @@
 			"close":"關閉"
 		},
 		"noSelectedSkin":"沒有選取皮膚",
+		"tips":{
+			"wear":"Protip: To wear a skin, tap and hold its icon!"
+		},
 		"skinDelete":{
 			"title":"確認刪除",
 			"message":"確定要刪除”%s“嗎？",
@@ -60,7 +63,7 @@
 			"description":"描述",
 			"method":{
 				"title":"添加皮膚為...",
-				"search":"By searching the Web",
+				"search":"透過網頁搜索",
 				"pseudo":"從現有的使用者",
 				"url":"從 URL",
 				"cancel":"取消"
@@ -72,15 +75,15 @@
 			"invalidUrl":"URL無效（必需為PNG檔）"
 		},
 		"search":{
-			"select":"Select this skin",
-			"searchHint":"Search on MC Network...",
+			"select":"選擇此皮膚",
+			"searchHint":"在MC網絡上搜索...",
 			"indicator":{
-				"searchResults":"Search Results for: %s",
-				"noResults":"No results for: %s",
-				"random":"Random Skins"
+				"searchResults":"正在搜尋：%s",
+				"noResults":"沒有結果：%s",
+				"random":"隨機皮膚"
 			},
 			"error":{
-				"network":"Couldn't load your search results. Check your connexion, and retry later."
+				"network":"無法載入搜索結果。請檢查連線，並稍后再試。"
 			}
 		},
 		"process":{
