--- a/Resources/i18n/ja.json
+++ b/Resources/i18n/ja.json
@@ -12,7 +12,7 @@
 		},
 		"noSelectedSkin":"スキンが選ばれていません。",
 		"tips":{
-			"wear":"Protip: To wear a skin, tap and hold its icon!"
+			"wear":"※スキンを適用するには、アイコンをタップしホールドしてください!"
 		},
 		"skinDelete":{
 			"title":"削除を確認する",
