--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+--------------- v2.0.1 ---------------
+Here's a small update that brings...
+* The app doesn't rely on our server anymore for skin previews. You're all so awesome you nearly took it down! :D
+* Crush some bugs
+* Added Russian translation, update the others
+
 --------------- v2.0 ---------------
 Main features:
 + Completely redesigned the app
